--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,11 @@
 body {
   background-color: #393E46;
 }
+
+h1{
+    margin: 30px;
+    font-size: 6rem;
+    color: #4ECCA3;
+    text-shadow: 5px 0 #232931;
+    font-family: 'Lobster', cursive;
+}
