--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,9 @@ h1{
     text-shadow: 5px 0 #232931;
     font-family: 'Lobster', cursive;
 }
+
+p {
+    font-size: 2rem;
+    color: #4ECCA3;
+    font-family: 'Indie Flower', cursive;
+}
